# riot-cli

./: Cargo.toml
riot-cli/: Cargo.toml
riot-cli/migrations/: 01_initialize.sql
riot-cli/src/: datastore.rs  main.rs  models.rs  val_store.rs
src/: login.rs  main.rs  val_user.rs
src/val_api/: endpoints.rs  mod.rs  models.rs  unofficial.rs
val-api/: Cargo.toml
val-api/src/: lib.rs  models.rs
val-api/src/endpoints/: auth.rs  mod.rs  store.rs  user.rs
val-login-webview/: Cargo.toml
val-login-webview/src/: lib.rs  tokens.rs
val-login-webview2/: Cargo.toml
val-login-webview2/src/: lib.rs
val-store-checker/: Cargo.toml
val-store-checker/src/: login.rs  main.rs  val_user.rs
val-store-checker/src/val_api/: mod.rs  models.rs
