[package]
name = "val-store-checker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "val-store-login"
path = "src/login.rs"

[dependencies]
chrono = { version = "0.4.22", features = [ "serde" ] }
reqwest = { version = "0.11.11", features = ["cookies", "json", "rustls-tls", "gzip", "native-tls"] }
reqwest_cookie_store = "0.4.0"
rustls = "0.20.6"
rustls-native-certs = "0.6.2"
serde = { version = "1.0.144", features = [ "derive" ] }
serde_json = "1.0.85"
serde_urlencoded = "0.7.1"
tokio = { version = "1.21.0", features = ["full"] }
url = { version = "2.3.1" }
webpki = "0.22.0"
webpki-roots = "0.22.4"
