[package]
name = "val-api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["cookies", "json", "rustls-tls", "gzip", "native-tls"] }
reqwest_cookie_store = "0.8"
rustls = "0.23"
rustls-native-certs = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "1.39.2", features = ["full"] }
url = "2.5"
val-login-webview = { path = "../val-login-webview" }
