[package]
name = "val-login-webview2"
version = "0.1.0"
edition = "2021"

[dependencies]
tao = "0.28.1"
wry = "0.41.0"
webview2 = { path = "../../webview2" }
webview2-sys = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
url = "2.5"
tokio = { version = "1.39.2", features = ["full"] }
winapi = "0.3.9"
cookie = "0.18"
