[package]
name = "val-login-webview2"
version = "0.1.0"
edition = "2021"

[dependencies]
tao = "0.28.1"
webview2 = { git = "https://github.com/novelhawk/webview2.git", branch = "master" }
webview2-sys = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
url = "2.5"
tokio = { version = "1.39.2", features = ["full"] }
winapi = "0.3.9"
val-api = { path = "../val-api" }
